[package]
name = "mhg_dl_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "gzip"] }
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lz-string = "0.1"
zip = { version = "0.6", default-features = false }
clap = { version = "3.0", features = ["derive"] }
regex = "1.5"
range-parser = "0.1.2"
rand = "0.9.2"
indicatif = "0.18.0"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3"
